code review feedback from @jongpie

--- a/plugins/CustomObjectRollupLogger/classes/RollupCustomObjectLoggerTests.cls
+++ b/plugins/CustomObjectRollupLogger/classes/RollupCustomObjectLoggerTests.cls
@@ -33,13 +33,16 @@ private class RollupCustomObjectLoggerTests {
     // if the message is too long for the platform event to fire - it simply won't fire!
     // this test is to ensure a RollupLogEntry__c is created
     RollupCustomObjectLogger rollupCustomLogger = new RollupCustomObjectLogger();
-    rollupCustomLogger.log('1'.repeat(RollupLogEvent__e.Message__c.getDescribe().getLength() + 1), LoggingLevel.ERROR);
+    Integer maximumLength = RollupLogEvent__e.Message__c.getDescribe().getLength();
+    rollupCustomLogger.log('1'.repeat(maximumLength + 1), LoggingLevel.ERROR);
 
     Test.startTest();
     rollupCustomLogger.save();
     Test.stopTest();
 
-    System.assertEquals(1, [SELECT COUNT() FROM RollupLogEntry__c], 'Message should have been created successfully!');
+    List<RollupLogEntry__c> logEntries = [SELECT Message__c FROM RollupLogEntry__c];
+    System.assertEquals(1, logEntries.size(), 'Message should have been created successfully!');
+    System.assertEquals(maximumLength, logEntries[0].Message__c.length());
   }
 
   @isTest
