--- a/rollup/core/classes/Rollup.cls
+++ b/rollup/core/classes/Rollup.cls
@@ -29,7 +29,7 @@ global without sharing virtual class Rollup {
   protected final Set<Id> matchingCalcItemIds;
   protected final RollupControl__mdt rollupControl;
   protected final InvocationPoint invokePoint;
-  protected final Boolean isBatched;
+  protected final Boolean isConductor;
   protected final List<RollupAsyncProcessor> rollups = new List<RollupAsyncProcessor>();
 
   // non-final instance variables
@@ -165,7 +165,7 @@ global without sharing virtual class Rollup {
   protected Rollup(InvocationPoint invokePoint) {
     this.invokePoint = invokePoint;
     this.rollupControl = getSingleControlOrDefault(RollupControl__mdt.DeveloperName, CONTROL_ORG_DEFAULTS, defaultControl);
-    this.isBatched = true;
+    this.isConductor = true;
     // a batch only becomes valid if other Rollups are added to it
     this.isNoOp = true;
   }
@@ -215,6 +215,10 @@ global without sharing virtual class Rollup {
     return this.toString();
   }
 
+  protected virtual String getTypeName() {
+    return Rollup.class.getName();
+  }
+
   /**
    * global facing RollupAsyncProcessor calculation section
    * - Trigger operations
@@ -247,6 +251,7 @@ global without sharing virtual class Rollup {
 
   @AuraEnabled
   global static String performBulkFullRecalc(List<Rollup__mdt> matchingMetadata, String invokePointName) {
+    RollupLogger.Instance.log('bulk full recalc called with data:', matchingMetadata, LoggingLevel.DEBUG);
     InvocationPoint localInvokePoint = invokeNameToInvokePoint.get(invokePointName);
 
     Integer amountOfCalcItems = 0;
@@ -271,7 +276,10 @@ global without sharing virtual class Rollup {
       }
 
       SObjectType childType = getSObjectFromName(matchingMeta.CalcItem__c).getSObjectType();
-      Set<String> whereFields = getQueryFieldsFromMetadata(matchingMeta, RollupEvaluator.getWhereEval(matchingMeta.CalcItemWhereClause__c, childType));
+      RollupEvaluator.WhereFieldEvaluator eval = String.isBlank(matchingMeta.CalcItemWhereClause__c)
+        ? null
+        : RollupEvaluator.getWhereEval(matchingMeta.CalcItemWhereClause__c, childType);
+      Set<String> whereFields = getQueryFieldsFromMetadata(matchingMeta, eval);
       RollupMetadata metaWrapper;
       if (childToMetaWrapper.containsKey(childType)) {
         metaWrapper = childToMetaWrapper.get(childType);
@@ -306,6 +314,8 @@ global without sharing virtual class Rollup {
       processors.add(fullRecalcRoll);
     }
 
+    RollupLogger.Instance.log('bulk full recalc starting for:', processors, LoggingLevel.DEBUG);
+    RollupLogger.Instance.save();
     return batch(processors);
   }
 
@@ -316,6 +326,7 @@ global without sharing virtual class Rollup {
 
   @AuraEnabled
   global static String performFullRecalculation(Rollup__mdt metadata) {
+    RollupLogger.Instance.log('beginning full recalculation for', metadata, LoggingLevel.DEBUG);
     FlowInput validationRuleWrapper = new FlowInput();
     validationRuleWrapper.rollupOperation = metadata.RollupOperation__c.toUpperCase();
     validationRuleWrapper.concatDelimiter = metadata.ConcatDelimiter__c;
@@ -326,7 +337,9 @@ global without sharing virtual class Rollup {
 
     QueryWrapper wrapper = new QueryWrapper(metadata.LookupObject__c, metadata.LookupFieldOnLookupObject__c);
     wrapper.setQuery(metadata.CalcItemWhereClause__c);
-    return getFullRecalcRollup(metadata, wrapper, InvocationPoint.FROM_LWC).runCalc();
+    Rollup fullRecalc = getFullRecalcRollup(metadata, wrapper, InvocationPoint.FROM_LWC);
+    RollupLogger.Instance.save();
+    return fullRecalc.runCalc();
   }
 
   global class FlowInput {
@@ -410,6 +423,8 @@ global without sharing virtual class Rollup {
       description='Used in conjunction with Ultimate Parent Field to drive hierarchical parent rollups'
     )
     global Boolean rollupToUltimateParent = false;
+    @InvocableVariable(label='Should run sync?' description='Runs rollup calculations synchronously when set to true')
+    global Boolean shouldRunSync = false;
     @InvocableVariable(label='SOQL Where Clause To Exclude Calc Items' description='If provided, excludes records based on a valid SOQL where clause')
     global String calcItemWhereClause;
     @InvocableVariable(label='Ultimate Parent Field' description='The lookup field in hierarchy rollups')
@@ -437,6 +452,7 @@ global without sharing virtual class Rollup {
     List<FlowOutput> flowOutputs = new List<FlowOutput>();
     List<Rollup> localRollups = new List<Rollup>();
     InvocationPoint fromInvocable = InvocationPoint.FROM_INVOCABLE;
+    RollupLogger.Instance.log('starting from invocable with data:', flowInputs, LoggingLevel.DEBUG);
 
     for (FlowInput flowInput : flowInputs) {
       FlowOutput flowOutput = new FlowOutput();
@@ -493,6 +509,9 @@ global without sharing virtual class Rollup {
           CACHED_ROLLUPS.add(batchedRollup);
         } else {
           localRollups.add(batchedRollup);
+        }
+        if (flowInput.shouldRunSync) {
+          batchedRollup.rollupControl.ShouldRunAs__c = RollupMetaPicklists.ShouldRunAs.SYNCHRONOUS;
         }
         RollupLogger.Instance.log(logMessage, batchedRollup, LoggingLevel.DEBUG);
       }
@@ -1133,7 +1152,10 @@ global without sharing virtual class Rollup {
 
     Set<String> uniqueFieldNames = new Set<String>();
     for (Rollup__mdt rollupInfo : matchingMetadata) {
-      uniqueFieldNames.addAll(getQueryFieldsFromMetadata(rollupInfo, RollupEvaluator.getWhereEval(rollupInfo.CalcItemWhereClause__c, sObjectType)));
+      RollupEvaluator.WhereFieldEvaluator eval = String.isBlank(rollupInfo.CalcItemWhereClause__c)
+        ? null
+        : RollupEvaluator.getWhereEval(rollupInfo.CalcItemWhereClause__c, sObjectType);
+      uniqueFieldNames.addAll(getQueryFieldsFromMetadata(rollupInfo, eval));
     }
 
     // it would have been nice if this was an enum!
@@ -1571,7 +1593,9 @@ global without sharing virtual class Rollup {
 
   private static Set<String> getQueryFieldsFromMetadata(Rollup__mdt meta, RollupEvaluator.WhereFieldEvaluator eval) {
     Set<String> queryFields = new Set<String>{ 'Id', meta.RollupFieldOnCalcItem__c, meta.LookupFieldOnCalcItem__c, meta.OrderByFirstLast__c };
-    queryFields.addAll(eval.getQueryFields());
+    if (eval != null) {
+      queryFields.addAll(eval.getQueryFields());
+    }
     return queryFields;
   }
 
@@ -1601,11 +1625,23 @@ global without sharing virtual class Rollup {
 
     RollupEvaluator.WhereFieldEvaluator whereEval = RollupEvaluator.getWhereEval(queryWrapper.toString(), childType);
     Set<String> queryFields = getQueryFieldsFromMetadata(meta, whereEval);
-    queryFields.addAll(RollupEvaluator.getWhereEval(meta.CalcItemWhereClause__c, childType).getQueryFields());
+    if (String.isNotBlank(meta.CalcItemWhereClause__c)) {
+      queryFields.addAll(RollupEvaluator.getWhereEval(meta.CalcItemWhereClause__c, childType).getQueryFields());
+    }
     String queryString = RollupQueryBuilder.Current.getQuery(childType, new List<String>(queryFields), 'Id', '!=', queryWrapper.getQuery());
 
-    Rollup fullRecalc = buildFullRecalcRollup(new List<Rollup__mdt>{ meta }, amountOfCalcItems, queryString, objIds, recordIds, childType, whereEval, invokePoint);
+    Rollup fullRecalc = buildFullRecalcRollup(
+      new List<Rollup__mdt>{ meta },
+      amountOfCalcItems,
+      queryString,
+      objIds,
+      recordIds,
+      childType,
+      whereEval,
+      invokePoint
+    );
     fullRecalc.queryCount = amountOfCalcItems;
+    RollupLogger.Instance.log('full recalc prepared:', fullRecalc, LoggingLevel.DEBUG);
     return fullRecalc;
   }
 
@@ -2003,6 +2039,7 @@ global without sharing virtual class Rollup {
         rollupMetadata
       );
     }
+    rollupConductor.isNoOp = rollupConductor.rollups.isEmpty();
     return rollupConductor;
   }
 
@@ -2331,6 +2368,9 @@ global without sharing virtual class Rollup {
     String owner,
     Rollup__mdt metadata
   ) {
+    if (String.isBlank(metadata.CalcItemWhereClause__c)) {
+      return;
+    }
     RollupEvaluator.WhereFieldEvaluator whereEval = RollupEvaluator.getWhereEval(metadata.CalcItemWhereClause__c, sObjectType);
     for (String whereClause : whereEval.getWhereClauses()) {
       if (whereClause.contains(typeField) || whereClause.contains(owner)) {
