--- a/rollup/core/classes/RollupFullBatchRecalculator.cls
+++ b/rollup/core/classes/RollupFullBatchRecalculator.cls
@@ -41,12 +41,21 @@ public class RollupFullBatchRecalculator extends RollupAsyncProcessor implements
   }
 
   public override void finish(Database.BatchableContext bc) {
-    RollupLogger.Instance.log('RollupFullBatchRecalculator finished', LoggingLevel.DEBUG);
+    RollupLogger.Instance.log(this.getTypeName() + ' finished', LoggingLevel.DEBUG);
     RollupLogger.Instance.save();
   }
 
+  protected override Map<String, String> customizeToStringEntries(Map<String, String> props) {
+    props = super.customizeToStringEntries(props);
+
+    this.addToMap(props, 'Rollup Metadata', this.rollupInfo);
+    this.addToMap(props, 'Query String', this.queryString);
+
+    return props;
+  }
+
   protected override String getTypeName() {
-    return 'RollupFullBatchRecalculator';
+    return RollupFullBatchRecalculator.class.getName();
   }
 
   protected override void retrieveAdditionalCalcItems(Map<String, Rollup.CalcItemBag> lookupToCalcItems, RollupAsyncProcessor rollup) {
